example: fix dark mode design

--- a/examples/demo/css/demo.css
+++ b/examples/demo/css/demo.css
@@ -1,12 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 
-html, body {
-    font-family: Roboto, sans-serif;
-    color: light-dark(#202020, #F0F0F0);
+:root {
+    color-scheme: light dark;
+
+    --icon-filter: none;
+    --arrow-filter: none;
+    --itowns-font: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
+    
 }
 
 
+html.light {
+    color-scheme: light;
+}
+
+html.dark {
+    color-scheme: dark;
+    --icon-filter: brightness(0) saturate(100%) invert(68%) sepia(87%) saturate(467%) hue-rotate(180deg) brightness(104%) contrast(87%);
+    --arrow-filter: brightness(0) saturate(100%) invert(33%) sepia(55%) saturate(230%) hue-rotate(168deg) brightness(92%) contrast(89%);
+}
+
+
+html, body {
+    font-family: var(--itowns-font);
+    color: light-dark(#202020, #F0F0F0);
+}
 
 
 
@@ -48,13 +66,18 @@ html, body {
 
 }
 
-.nav-btn:hover {
+.nav-btn:not(:disabled):hover {
     background-color: #1052AD;
 }
 
+
+.nav-btn:disabled img {
+    filter: var(--arrow-filter);
+}
+
+
 #prev-next-container img {
     height: 1.7rem;
-    /* width: 3rem; */
 }
 
 
@@ -70,7 +93,6 @@ html, body {
 
     width: min(60vw, 40vh); 
     max-height: 40vh;
-    /* padding: 2vh 3vh; */
     border-radius: 1rem;
     background-color: light-dark(white, #0F1419);
     backdrop-filter: blur(0.5vh);
@@ -99,27 +121,18 @@ html, body {
 }
 
 
-/*
-#scene-info hr {
-    
-}
-*/
-
 
 #textContainer {
     position: static;
 
     display: flex;
     flex-direction: column;
-
-    /* color: black; */
-    /* text-align: center; */
 }
 
 #info-bottom-container .scene-number-info {
-    background-color: light-dark(#F0F6FF, #09184b);
+    background-color: light-dark(#F0F6FF, #061f42);
     border-radius: 0.5em;
-    color: #1565c1;
+    color: light-dark(#1565c1, #8CC1EE);
     padding: 0.2em 0.4em;
     width:fit-content;
     margin: 0;
@@ -130,11 +143,16 @@ html, body {
 
 
 #sceneTitle {
-    color: light-dark(#1565c1, #8CC1EE);
+    color: light-dark(#1565c1, #8fb9f3);
     text-transform: uppercase;
     font-weight: 500;
     font-size: 2.3vh;
     
+}
+
+
+#sceneDescription {
+    line-height: 1.3em;
 }
 
 
@@ -166,22 +184,19 @@ html, body {
     color: light-dark(#1565c1, #8CC1EE);
     text-transform: uppercase;
     border-radius: 15px;
-    /* font-size: min(1vh, 1.5vw); */
-
     
     white-space: nowrap; 
     flex-shrink: 0;
-    
-
     cursor: pointer;
 }
 
 #navigation-container button:hover {
-    background-color: #CEE5FB;
+    background-color: light-dark(#CEE5FB, #09184B);
 }
 
 .nav-logo  {
     height: 1.5rem;
+    filter: var(--icon-filter);
 }
 
 
@@ -191,10 +206,11 @@ button:hover {
 }
 
 button:disabled {
-    background-color: #E5E5E5;
+    background-color: light-dark(#E5E5E5, #13202c);
     color: #A0A0A0;
     cursor: not-allowed;
 }
+
 
 button:active {
     background-color: #7EA8C5;
@@ -209,7 +225,7 @@ button.active {
 #sceneDots {
     display: flex;
     flex-direction: column;
-    gap: min(1vh, 1.5vw);
+    gap: min(1.5vh, 1.5vw);
     align-items: center;
     position: fixed;
     left: 2rem;
@@ -220,16 +236,18 @@ button.active {
 .scene-dot {
     width: min(1.5vh, 2vw);
     height: min(1.5vh, 2vw);
-    border-radius: 50%;
-    /* border: 1px solid #000; */
-    background-color: #ffffff;
+    border-radius: 100px;
+    background-color: light-dark(#ffffff, #0F1419 );
     cursor: pointer;
-    transition: transform 0.15s ease, background-color 0.15s ease;
+    transition: height 0.3s ease, background-color 0.15s ease, transform 0.15s ease;    
+    box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.3);
+
 }
 
 .scene-dot.active {
     background-color: #1565c1;
-    transform: scale(1.4);
+    height: min(4vh, 6vw);
+    transform: scale(1);
 }
 
 .scene-dot:hover {
@@ -246,11 +264,11 @@ button.active {
     overflow-y: auto;
 
     font-size: min(1.5vh, 2vw);
-    color: black;
+    /* color: black; */
 
     max-width: 25vw;
     max-height: 45vh;
-    background-color: white;
+    background-color: light-dark(white, #0F1419);
     box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.3);
 
     z-index: 100;
@@ -265,7 +283,7 @@ button.active {
 
 .feature-name {
     text-transform: uppercase;
-    color: #1565c1;
+    color: light-dark(#1565c1, #8CC1EE);
     font-size: 1.2rem;
 }
 
